--- a/sp2025/lectures/_template-lecture-housekeeping.qmd
+++ b/sp2025/lectures/_template-lecture-housekeeping.qmd
@@ -50,10 +50,12 @@ for i,item in enumerate(lecture_topics):
 
         internal_link = f"#"+topic.lower().replace(" ","-")
         s = f"\n* [{topic}]({internal_link})"
-        print(s)
+        if not topic in ["&nbsp;",".","(blank)","blank"]:
+            print(s)
 
     elif isinstance(item,str):
-        print(f"* {item}\n")
+        if not item in ["&nbsp;",".","(blank)","blank"]:
+            print(f"* {item}\n")
 
 print(f"""
 
