--- a/sp2025/lectures/lecture-19.qmd
+++ b/sp2025/lectures/lecture-19.qmd
@@ -2,6 +2,14 @@
 date: '2025-03-27'
 discussion-items:
 - options: target="_blank"
+  post_text: '- due 3/23, SUN'
+  topic: Homework 5 - Getting started
+  url: https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072341
+- options: target="_blank"
+  post_text: ''
+  topic: (Python-Quarto Setup Website)
+  url: https://vcu-ssg.github.io/ssg-quarto-python-setup/
+- options: target="_blank"
   post_text: '- due 3/27, THU'
   topic: Quiz 4 - SQL Basics
   url: https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072331
@@ -9,11 +17,19 @@ discussion-items:
   post_text: '- due 3/30, SUN'
   topic: Deliverable 6 - Docker Scaffold
   url: https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075772
+- options: target="_blank"
+  post_text: ''
+  topic: SAVE YOU HOURS™
+  url: https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-save-you-hours
 lecture-id: 19
 lecture-topics:
-- topic: When ready, the complete lecture will replace this one.
-  url: .
-title: More C-R-U-D
+- topic: Del 6 - Semester project and Docker
+  url: _deliverable-6-getting-started-with-docker-sp2025.qmd
+- topic: Creating and populating tables
+  url: _creating-and-populating-tables.qmd
+- topic: .
+  url: _rest-of-class-working-examples.qmd
+title: C-R-U-D
 ---
 
 ```{python}
@@ -26,8 +42,18 @@ this_file = 'lecture-19.qmd'
 
 <!-- lecture-block-begin -->
 
-# When ready, the complete lecture will replace this one.
-<!-- no url provided in Topics tab -->
+# Del 6 - Semester project and Docker
+
+{{< include ../../topics/_deliverable-6-getting-started-with-docker-sp2025.qmd >}}
+
+# Creating and populating tables
+
+{{< include ../../topics/_creating-and-populating-tables.qmd >}}
+
+
+
+
+{{< include ../../topics/_rest-of-class-working-examples.qmd >}}
 <!-- lecture-block-end -->
 
 
