--- a/sp2025/lectures/lecture-24.qmd
+++ b/sp2025/lectures/lecture-24.qmd
@@ -1,14 +1,24 @@
 ---
 date: '2025-04-15'
 discussion-items:
+- options: .
+  post_text: .
+  topic: Homework update
+  url: .
 - options: target="_blank"
   post_text: '- due 4/20, SUN'
   topic: Homework 8 - SQL Funhouse
   url: https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072347
 lecture-id: 24
 lecture-topics:
-- topic: When ready, the complete lecture will replace this one.
-  url: .
+- topic: Subqueries in SQL
+  url: _sql-subqueries.qmd
+- topic: Common Table Expressions
+  url: _sql-common-table-expressions.qmd
+- topic: Homework 8 - SQL Funhouse
+  url: _homework-8-sql-funhouse-sp2025.qmd
+- topic: .
+  url: _rest-of-class-working-examples.qmd
 title: Subqueries and WITH 1
 ---
 
@@ -22,8 +32,22 @@ this_file = 'lecture-24.qmd'
 
 <!-- lecture-block-begin -->
 
-# When ready, the complete lecture will replace this one.
-<!-- no url provided in Topics tab -->
+# Subqueries in SQL
+
+{{< include ../../topics/_sql-subqueries.qmd >}}
+
+# Common Table Expressions
+
+{{< include ../../topics/_sql-common-table-expressions.qmd >}}
+
+# Homework 8 - SQL Funhouse
+
+{{< include ../../topics/_homework-8-sql-funhouse-sp2025.qmd >}}
+
+
+
+
+{{< include ../../topics/_rest-of-class-working-examples.qmd >}}
 <!-- lecture-block-end -->
 
 
