--- a/sp2025/details/week-16-details.qmd
+++ b/sp2025/details/week-16-details.qmd
@@ -10,18 +10,47 @@ this_file = "week-00-details.qmd"
 
 <!-- overview-block-begin -->
 
-<p class="lead">This week we cover procedure, functions, views, triggers, and security.</p>
+<p class="lead">This is the last week of school. No class on Tuesday! Keep focused on finishing out your semester-long project!</p>
     
 <!-- overview-block-end -->
+
+#### Lecture update 
+
+- Lecture on Tuesday, April 29 is CANCELLED.  I will be submitting course updates
+via Canvas Announcements.  We will have no scheduled in-class activities.
+
+#### End of semester checklist
+
+It's end of the semester time! Plenty to do to ensure that you earn your best grade possible!
+
+- [Check the gradebook](https://virginiacommonwealth.instructure.com/courses/113813/gradebook).
+
+	- Verify your scores and email me if you have any questions
+	- Submit any missing assignments, discussions or quizzes.
+
+- Complete the [course evaluation](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1081397). You'll get credit towards your final grade AND you'll be helping 
+improve the course for the next group of students. Thank you!
+
+Please use the Discord and the TAs as your first stop for questions.  My response time over the next week will be slow.
+
+#### IMPORTANT
+
+* **No late submissions will be accepted.  Midnight, April 29 is the deadline.**
+
+* **Once Canvas closes, it's done. You've still got time to get stuff done!**
+
+* **April 29 is the deadline. No late submissions will be accepted.**
+
+
 
 <!-- deliverables-block-begin -->
 #### Things to do this week
 
 
-[Survey 2 - Course evaluation](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1081397)  - add description to course workbook.
+[Survey 2 - Course evaluation](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1081397) - course evaluations are important.  Submit a pic of your submission screen for points!  Thank you for completing the survey!
 
 
-[Deliverable 7 - Final Submission](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075774) Final Submission
+[Deliverable 7 - Final Submission](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075774) is your final project report submission.
 
 <!-- deliverables-block-end -->
 
